#声明要求的最小版本
cmake_minimum_required(VERSION 3.0)
#项目名称
PROJECT(server)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall -O2")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SEC_LIST)

ADD_EXECUTABLE(server ${SEC_LIST})
 
 
#EXECUTABLE_OUTPUT_PATH && LIBRARY_OUTPUT_PATH用来指定二进制文件位置和库文件路径，这里不包括中间文件
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
# INSTALL(TARGETS main DESTINATION bin)

# #增加客制化命令make run运行main
# ADD_CUSTOM_TARGET(run COMMAND main)
